# PyPulsefit

./: .gitignore  README.md  pyproject.toml
playground/: 001_open_asc.py  002_open_multistack_asc.py  003_use_dataset.py  004_estimate_baseline.py  005_filter_data.py  006_detect_AP.py  006b_get_all_peaks_GH4C1.py  007_detect_AP_2.py  007_plot_AP.py  008_plot_AP_metrics.py  009_get_avg_AP.py  old_fit_AP.py
src/pypulsefit/: action_potential.py  loader.py  patch_clamp.py  utils.py
tests/: get_ap_test.py  get_peaks_cwt_test.py  loader_test.py  patch_clamp_test.py
